@@ -25,107 +25,103 @@ class mail
         this.message = message;
     }
 }
+import org.apache.commons.lang3.tuple.Triple;
+
+        import java.lang.reflect.Array;
+        import java.util.ArrayList;
+        import java.util.Date;
+
 public class Gmail extends Email {
 
     int inboxCapacity; //maximum number of mails inbox can store
+//    private ArrayList<ArrayList<ArrayList<Date, String, String>>> Inbox;
+//    private ArrayList<Triple<Date, String, String>> Trash;
     //Inbox: Stores mails. Each mail has date (Date), sender (String), message (String). It is guaranteed that message is distinct for all mails.
     //Trash: Stores mails. Each mail has date (Date), sender (String), message (String)
-    Deque<mail> inbox;
-    ArrayList<mail> trash;
+
+    private ArrayList<Mail> Inbox;
+    private ArrayList<Mail> Trash;
     public Gmail(String emailId, int inboxCapacity) {
         super(emailId);
         this.inboxCapacity = inboxCapacity;
-        inbox = new LinkedList<>();
-        trash = new ArrayList<>();
+        this.Inbox = new ArrayList<>();
+        this.Trash = new ArrayList<>();
     }
 
+    public void setInboxCapacity(int inboxCapacity) {
+        this.inboxCapacity = inboxCapacity;
+    }
 
     public void receiveMail(Date date, String sender, String message){
-        // If the inbox is full, move the oldest mail in the inbox to trash and add the new mail to inbox.
-        // It is guaranteed that:
-        // 1. Each mail in the inbox is distinct.
-        // 2. The mails are received in non-decreasing order. This means that the date of a new mail is greater than equal to the dates of mails received already.
-        if(inbox.size()==inboxCapacity){
-            trash.add(inbox.removeFirst());
+        Mail mail = new Mail(date, sender, message);
+        if(this.Inbox.size() == this.inboxCapacity){
+//            mail = this.Inbox.get(0);
+            this.Trash.add(this.Inbox.get(0));
+            this.Inbox.remove(0);
+            this.Inbox.add(mail);
         }
-        inbox.add(new mail(date,sender,message));
+        else
+            this.Inbox.add(mail);
     }
 
     public void deleteMail(String message){
-        // Each message is distinct
-        // If the given message is found in any mail in the inbox, move the mail to trash, else do nothing
-        Iterator<mail> it= inbox.iterator();
-        while (it.hasNext()) {
-            mail obj = it.next();
-            if(obj.getMessage().equals(message))
-            {
-                trash.add(obj);
-                it.remove();
+        int idx = -1;
+
+        for(int i = 0; i < this.Inbox.size(); i++){
+            if(message.equals(this.Inbox.get(i).messageData)){
+                idx = i;
                 break;
             }
         }
-
+        if(idx != -1){
+            this.Trash.add(this.Inbox.get(idx));
+            this.Inbox.remove(idx);
+        }
     }
 
     public String findLatestMessage(){
-        // If the inbox is empty, return null
-        // Else, return the message of the latest mail present in the inbox
-        if(inbox.size() == 0){
+
+        if(this.Inbox.isEmpty()){
             return null;
         }
-        return inbox.peekLast().getMessage();
-
+        else {
+            return this.Inbox.get(this.Inbox.size() - 1).messageData;
+        }
     }
 
     public String findOldestMessage(){
-        // If the inbox is empty, return null
-        // Else, return the message of the oldest mail present in the inbox
-        if(inbox.size() == 0){
+
+        if(this.Inbox.isEmpty()){
             return null;
         }
-        return inbox.peek().getMessage();
-
+        else {
+            return this.Inbox.get(0).messageData;
+        }
     }
 
     public int findMailsBetweenDates(Date start, Date end){
-        //find number of mails in the inbox which are received between given dates
-        //It is guaranteed that start date <= end date
-        Iterator<mail> it = inbox.iterator();
-        int count=0;
-        while (it.hasNext()) {
-            mail obj=it.next();
-//           if(obj.date.after(start) && obj.date.before(end))
-            if(obj.date.getTime() >=start.getTime() && obj.date.getTime()<=end.getTime())
-            {
+        int count = 0;
+        for(int i = 0; i < this.Inbox.size(); i++){
+            if(this.Inbox.get(i).date.compareTo(start) >=0 && this.Inbox.get(i).date.compareTo(end) <= 0){
                 count++;
             }
-
         }
         return count;
-
     }
 
     public int getInboxSize(){
-        // Return number of mails in inbox
-        return inbox.size();
-
+        return this.Inbox.size();
     }
 
-
     public int getTrashSize(){
-        // Return number of mails in Trash
-        return trash.size();
-
+        return this.Trash.size();
     }
 
     public void emptyTrash(){
-        // clear all mails in the trash
-        trash.clear();
-
+        this.Trash.clear();
     }
 
     public int getInboxCapacity() {
-        // Return the maximum number of mails that can be stored in the inbox
-        return inboxCapacity;
+        return this.inboxCapacity;
     }
 }
